--- a/index.html
+++ b/index.html
@@ -16,26 +16,15 @@
 <div class="banner">
     <!-- Code your Banner section -->
     <h1>Life Changing, House</h1>
-    <p>Inverst Your Future To Get The Best House Ever</p>
+    <p>Invest Your Future To Get The Best House Ever</p>
     <a href="https://www.lewagon.com/" class="btn">Apply now!</a>
 </div>
-    
+
+
 <div>
-  <!-- Code your Cards section -->
   <h2 class="container">Some of our campuses</h2>
+  <!-- Code your Cards section -->
   <div class = "cards">
-    <div class="card-white">
-      <img src="images/shanghai.jpg" alt="Shanghai" width="200">
-      <h3>Shanghai</h3>
-    </div>
-    <div class="card-white">
-        <img src="images/london.jpg" alt="London" width="200">
-        <h3>London</h3>
-    </div>
-    <div class="card-white">
-        <img src="images/paris.jpg" alt="Paris" width="200">
-        <h3>Paris</h3>
-      </div>
       <div class="card-white">
         <img src="images/shanghai.jpg" alt="Shanghai" width="200">
         <h3>Shanghai</h3>
@@ -48,11 +37,27 @@
           <img src="images/paris.jpg" alt="Paris" width="200">
           <h3>Paris</h3>
         </div>
-    </div>
-    <div class="footer">
-      <!-- Code your Footer section -->
-      <p>Website made with ❤️ at Le Maison</p>
-    </div>
+        <div class="card-white">
+          <img src="images/Ethiopia.png" alt="Paris" width="200">
+          <h3>Ethiopia</h3>
+        </div>
+        <div class="card-white">
+          <img src="images/San Francisco.png" alt="Paris" width="200">
+          <h3>San Francisco</h3>
+        </div>
+        <div class="card-white">
+          <img src="images/South-Africa.png" alt="Paris" width="200">
+          <h3>Sourth-Africa</h3>
+        </div>
+        <div class="card-white">
+          <img src="images/Sweden.png" alt="Paris" width="200">
+          <h3>Sweden</h3>
+        </div>
+  </div>
+      <div class="footer">
+        <!-- Code your Footer section -->
+        <p>Website made with ❤️ at Le Maison</p>
+      </div>
 </div>
   </body>
 </html>
